--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,5 +20,5 @@
     </section>
 </main>
 <!-- 3 - includes disqus and footer -->
-{% include disqus_comments.html %}
+{% include disqus.html %}
 {% include footer.html %}
