--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -5,7 +5,7 @@
             <script>
             (function() {
             var d = document, s = d.createElement('script');
-            s.src = '{{site.disqus_user}}';
+            s.src = 'https://https-kwonyezy-github-io.disqus.com/embed.js';
             s.setAttribute('data-timestamp', +new Date());
             (d.head || d.body).appendChild(s);
             })();
