--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,4 +1,6 @@
+---
+layout: home
+---
 
-{% include header.html %}
-{{content}}
-{% include footer.html %}
+<h1>{{ site.title }}</h1>
+<p>{{ site.description }}</p>
