--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,6 +42,8 @@
 }
 </style>
 
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
+
 <script src="{{ '/assets/js/fontfaceobserver.js' | prepend: site.baseurl }}" type="text/javascript"></script>
 <script type="text/javascript">
     const nunitoObserver = new FontFaceObserver('Nunito Sans');
