--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,7 @@
 
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
 
-<script src="{{ '/assets/js/fontfaceobserver.js' | prepend: site.baseurl }}" type="text/javascript"></script>
+<script src="{{ site.baseurl }}/assets/js/fontfaceobserver.js" type="text/javascript"></script>
 <script type="text/javascript">
     const nunitoObserver = new FontFaceObserver('Nunito Sans');
     const righteousObserver = new FontFaceObserver('Righteous');
