--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,11 +17,20 @@
       <div>
         {{ content }}
       </div>
+      {% if page.category %}
+      <div class="post-info">
+        <a class="info-box category-box" href="{{ site.baseurl }}/categories/{{ page.category | downcase }}">
+          <span>{{ page.category }}</span>
+        </a>
+      </div>
+      {% endif %}
+      {% if page.categories %}
       <div class="post-info">
         <a class="info-box category-box" href="{{ site.baseurl }}/categories/{{ page.categories | first | downcase }}">
           <span>{{ page.categories | first }}</span>
         </a>
       </div>
+      {% endif %}
     </article>
   </main>
   <footer>
